# claw-machine

./: CREDITS.md  Cargo.toml  LICENSE  README.md
assets/models/: claw_machine.glb  kleeblatt_nosky.glb
assets/models/licensed/: README.md  caucasian_highlander.glb  claw_machine.glb
src/: camera.rs  claw.rs  claw_machine.rs  constants.rs  controls.rs  game_results.rs  gameplay.rs  glue.rs  helpers.rs  main.rs  movement.rs  room.rs  toy.rs
src/assets/: audio.rs  gltf.rs  mod.rs
src/gamemodes/: gameplay.rs  mod.rs  number_game.rs  speed_game.rs
src/ui/: main_menu.rs  menu.rs  mod.rs  system_info.rs
src/ui/controls/: button.rs  in_game_text.rs  menu.rs  mod.rs
