[package]
name = "claw-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = [
    # default features
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",

    # additional features
    "dynamic",
]

[dependencies]
# bevy = {git = "https://github.com/bevyengine/bevy", rev = "6228e8a4bbdb966659f7dae1e87cf55e8318bde3" }
# bevy = { path = "../bevy"}
bevy_rapier3d = { version = "0.13.2", features = ["simd-nightly"] }
# bevy_kira_audio = { version = "0.9.0" }
# .add_audio_channel support
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", rev = "c6970f6d480f4425d665ba62a3e3d6cb1d67fee1" }
rand = "0.8.4"
iyes_loopless = "0.5.1"

# Fast compile
[toolchain]
channel = "nightly"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

# Rapier optimization
codegen-units = 1